Fix family tree and translation overflow

--- a/src/components/PokemonMoves.scss
+++ b/src/components/PokemonMoves.scss
@@ -22,7 +22,7 @@
 }
 
 .move-card {
-    color: var(--titleTextColor);
+    color: var(--titleMoveTextColor);
     border-radius: 12px;
 }
 
